# bookSum

./: .gitignore
WebApi/: Cargo.toml  build.rs
WebApi/src/: main.rs
WebUI/: .gitignore  deno.json  package-lock.json  package.json
WebUI/app/: page.tsx
WebUI/src/: grpc-client.ts
proto/: book.proto
