[package]
name = "WebApi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tonic-web = "0.11.0"
tower-http = { version = "0.4.4", features = ["cors"] }
mongodb = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"

[build-dependencies]
tonic-build = "0.11"
